--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -35,7 +35,7 @@ The **Advanced Template** Premium plugin enables the creation of complex, intera
 
 Templates are declared as `const` variables that can be setup as part of a {productname} instance.
 
-They can also be added to a {productname} instance by end-users selecting content in a {productname} document and saving the selection as a template via the {productname} user-interface.
+The end-users can select content in a {productname} document and save the selection as a template via the {productname} user-interface.
 
 For information on the **Advanced Template** plugin, see: xref:advanced-templates.adoc[Advanced Template].
 
