--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -143,7 +143,7 @@ The {productname} 6.4.1 release includes an accompanying release of the **Merge 
 ==== The mceMergeTag command now preserves the selected content as a plain text and wraps it in a merge tag prefix and suffix if the content length exceeds the limit.
 //#TINY-9444
 
-In previous versions of {productname}, content which exceeded the character limit for Merge Tags was removed when surrounded by the configured Merge Tag prefix and suffix.
+In previous versions of {productname}, the prefix and suffix were removed when merge tag content exceeded the character limit for the merge tag.
 
 In {productname} 6.4.1 this content is retained, as well as the prefix and suffix, though it is not converted into a Merge Tag.
 
