--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -351,7 +351,7 @@ In {productname} 6.4.1, pressing enter inside the `fontsizeinput` input now retu
 
 A new tree component has been added to {productname}, that can be used in custom plugins and models.
 
-The new tree component is designed to create a visual representation of the hierarchical structure of items such as, showcasing folders and the files within these folders, similar to how a directory works which allows users to easily identify various structure levels within set categories, such as how the new `advtemplate` works.
+The new tree component is designed to create a visual representation of the hierarchical structure of items such as, showcasing folders and the files within these folders, similar to how a directory works which allows users to easily identify various structure levels within set categories, such as how the new Advanced Template plugin works.
 
 This new tree component is an important addition to {productname} which will be used in several features with up and coming releases in the future.
 
