--- a/modules/ROOT/partials/configuration/advtemplate_create_category.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_create_category.adoc
@@ -1,18 +1,41 @@
 [[advtemplate_create_category]]
 == `advtemplate_create_category`
 
-This option creates a Template category.
+The plugin uses the `advtemplate_create_category` asynchronous function to create a category.
 
-*Type:* `+String+`
+*Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Possible values:* `id: '<string>'`
+*Input parameters:*
+[cols="1,1,1,3",options="header"]
+|===
+|Field |Type |Required? |Description
+|`+title+` | `+string+` | required | The title of the category.
+|===
+
+*Return data:*
+[cols="1,1,3",options="header"]
+|===
+|Field |Type |Description
+|`+id+` | `+string+` | The id of the newly created category.
+|===
 
 === Example: using `advtemplate_create_category`
 
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  advtemplate_create_category: "id: 'category 01'",
+  selector: 'textarea#advtemplate',  // change this value according to your html
+  plugins: ["advtemplate"],
+  advtemplate_create_category: (title) =>
+    fetch('/categories', {
+      method: 'POST',
+      body: JSON.stringify({
+        title
+      }),
+    })
+    .then((response) => response.json())
+    .then(({ id }) => ({ id }))
+    .catch((error) => console.log('Failed to create category\n' + error)),
 });
 ----
+
