--- a/modules/ROOT/partials/configuration/advtemplate_create_template.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_create_template.adoc
@@ -1,45 +1,44 @@
 [[advtemplate_create_template]]
 == `advtemplate_create_template`
 
-This option creates a Template.
+The plugin uses the `advtemplate_create_template` asynchronous function to create a template.
 
-*Type:* `+String+`
+*Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Possible values:* `id: '<string>'`
+*Input parameters:*
+[cols="1,1,1,3",options="header"]
+|===
+|Field |Type |Required? |Description
+|`+title+` | `+string+` | required | The title of the template.
+|`+content+` | `+string+` | required | The content of the template.
+|`+categoryId+` | `+string+` | optional | The parent category id.
+|===
+
+*Return data:*
+[cols="1,1,3",options="header"]
+|===
+|Field |Type |Description
+|`+id+` | `+string+` | The id of newly created template.
+|===
 
 === Example: using `advtemplate_create_template`
 
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  advtemplate_create_template: 'id: "id: ID, title: TITLE, content: CONTENT, categoryId: CATEGORYID"',
-});
-----
-
-
-=== Example: a function that sets a value for `advtemplate_create_template`
-
-[source,js]
-----
-const advtemplate_create_template = (title, content, categoryId) => {
-  return fetch("/templates", {
-    method: "POST",
-    body: JSON.stringify({
-      title,
-      content,
-      categoryId,
-    }),
-    headers,
-  })
-    .then((response) => {
-      if (!response.ok) {
-        throw new Error("Failed to create template");
-      }
-      return response.json();
+  selector: 'textarea#advtemplate',  // change this value according to your html
+  plugins: ["advtemplate"],
+  advtemplate_create_template: (title, content, categoryId) =>
+    fetch('/templates', {
+      method: 'POST',
+      body: JSON.stringify({
+        title,
+        content,
+        categoryId
+      }),
     })
-    .then((data) => {
-      return { id: data.id };
-    });
-};
+    .then((response) => response.json())
+    .then(({ id }) => ({ id }))
+    .catch((error) => console.log('Failed to create template\n' + error)),
+});
 ----
