--- a/modules/ROOT/partials/configuration/advtemplate_delete_template.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_delete_template.adoc
@@ -1,18 +1,33 @@
 [[advtemplate_delete_template]]
 == `advtemplate_delete_template`
 
-This option deletes the nominated Template.
+The plugin uses the `advtemplate_delete_template` asynchronous function to delete a template.
 
-*Type:* `+String+`
+*Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Possible values:* `'id: "string"'`
+*Input parameters:*
+[cols="1,1,1,3",options="header"]
+|===
+|Field |Type |Required? |Description
+|`+id+` | `+string+` | required | The id of the template to delete.
+|===
+
+*Return data:*
+Empty object  `{}`
 
 === Example: using `advtemplate_delete_template`
 
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  advtemplate_delete_template: 'id: "<template>"',
+  selector: 'textarea#advtemplate',  // change this value according to your html
+  plugins: ["advtemplate"],
+  advtemplate_delete_template: (id) =>
+    fetch('/templates/' + id, {
+      method: 'DELETE',
+    })
+    .then((response) => response.json())
+    .then(({ id }) => ({}))
+    .catch((error) => console.log('Failed to delete template\n' + error)),
 });
 ----
