--- a/modules/ROOT/partials/configuration/advtemplate_list.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_list.adoc
@@ -1,53 +1,61 @@
 [[advtemplate_list]]
 == `advtemplate_list`
 
-This option retrieves the list of templates to be displayed in the *Insert Template* dialog.
+The plugin uses the `advtemplate_list` asynchronous function to retreive the template list.
 
-*Type:* see the example below
+*Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Possible values:* see the example below
+*Input parameters:*
+None
+
+*Return data:*
+Look in the example below
 
 === Example: using `advtemplate_list`
 
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  advtemplate_list: () => {
-    return Promise.resolve([
-      {
-        id: '1',
-        title: 'Resolving tickets',
-        content: '<p>As we have not heard back from you in over a week, so we have gone ahead and resolved your ticket</p>'
-      },
-      {
-        id: '2',
-        title: 'Quick replies',
-        items: [
-          {
-            id: '3',
-            title: 'Message received',
-            content: '<p>Just a quick note to say we have received your message, and will get back to you within 48 hours.</p>'
-          },
-          {
-            id: '4',
-            title: 'Progress update',
-            content: '</p>Just a quick note to let you know we are still working on your case</p>'
-          }
-        ]
-      }
-    ]);
-  }
+  selector: 'textarea#advtemplate',  // change this value according to your html
+  plugins: ["advtemplate"],
+  advtemplate_list: () =>
+    fetch('/categories', {
+      method: 'GET',
+    })
+    .then((response) => response.json())
+    .then((data) => data)
+    .catch((error) => console.log('Failed to get template list\n' + error)),
 });
 ----
 
-The list returned by `advtemplate_list` must match the following requirements:
+=== Example of`advtemplate_list` response
+
+[source,js]
+----
+const data = [{
+    id: '1',
+    title: 'Resolving tickets',
+  },
+  {
+    id: '2',
+    title: 'Quick replies',
+    items: [{
+        id: '3',
+        title: 'Message received',
+      },
+      {
+        id: '4',
+        title: 'Progress update',
+      }
+    ]
+  }
+];
+----
+
+The data returned by `advtemplate_list` must match the following requirements:
 
 . Each list item must have a unique `id` value.
 . Each list item must have a non-empty `title` value.
 . Category items in the list must not contain nested categories.
-
-However, a category item in the response:
-
-. May contain an empty `items` list.
-. Is not required to include a `content` value.
+. Category item may contain an empty `items` list.
+. Template item is not required to include a `content` value.
