--- a/modules/ROOT/partials/configuration/advtemplate_move_category_items.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_move_category_items.adoc
@@ -1,19 +1,37 @@
 [[advtemplate_move_category_items]]
 == `advtemplate_move_category_items`
 
-This option moves all Templates in one category to a different Template category.
+The plugin uses the `advtemplate_move_category_items` asynchronous function to move all templates from a given category to the another one.
 
-*Type:* `+String+`
+*Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Possible values:* `categoryId: "<categoryId>" newCategoryId: "<newCategoryId>"`
+*Input parameters:*
+[cols="1,1,1,3",options="header"]
+|===
+|Field |Type |Required? |Description
+|`+oldCategoryId+` | `+string+` | required | The id of the source category .
+|`+newCategoryId+` | `+string+` | optional | The id of the destination category.
+|===
 
-=== Example: using `advtemplate_move_category_items`
+*Return data:*
+Empty object  `{}`
 
-// This should be a working configuration. Please test.
+=== Example: using `advtemplate_move_category_itmes`
+
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  advtemplate_move_category_items: 'categoryId: "<categoryId>" newCategoryId: "<newCategoryId>"',
+  selector: 'textarea#advtemplate',  // change this value according to your html
+  plugins: ["advtemplate"],
+  advtemplate_move_category_items: (oldCategoryId, newCategoryId) =>
+    fetch('/categories/' + oldCategoryId, {
+      method: 'PATCH',
+      body: JSON.stringify({
+        newCategoryId
+      }),
+    })
+    .then((response) => response.json())
+    .then(({ id }) => ({}))
+    .catch((error) => console.log('Failed to move category items\n' + error)),
 });
 ----
