--- a/modules/ROOT/partials/configuration/advtemplate_move_template.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_move_template.adoc
@@ -1,20 +1,37 @@
 [[advtemplate_move_template]]
 == `advtemplate_move_template`
 
-This option moves a Template to another category.
+The plugin uses the `advtemplate_move_template` asynchronous function to move the template to another category.
 
-*Type:* `+String+`
+*Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Possible values:* `id: "string" categoryId: "string"`
+*Input parameters:*
+[cols="1,1,1,3",options="header"]
+|===
+|Field |Type |Required? |Description
+|`+templateId+` | `+string+` | required | The id of the template to move .
+|`+newCategoryId+` | `+string+` | optional | The id of the destination category.
+|===
 
+*Return data:*
+Empty object  `{}`
 
 === Example: using `advtemplate_move_template`
 
-// This should be a working configuration. Please test.
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  advtemplate_move_template: 'id: "<template-id>" categoryId: "<category-id>"',
+  selector: 'textarea#advtemplate',  // change this value according to your html
+  plugins: ["advtemplate"],
+  advtemplate_move_template: (templateId) =>
+    fetch('/templates/' + templateId, {
+      method: 'PATCH',
+      body: JSON.stringify({
+        newCategoryId
+      }),
+    })
+    .then((response) => response.json())
+    .then(({ id }) => ({}))
+    .catch((error) => console.log('Failed to move template\n' + error)),
 });
 ----
