--- a/modules/ROOT/partials/configuration/advtemplate_rename_template.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_rename_template.adoc
@@ -1,18 +1,37 @@
 [[advtemplate_rename_template]]
 == `advtemplate_rename_template`
 
-This option renames a Template.
+The plugin uses the `advtemplate_rename_template` asynchronous function to rename a template.
 
-*Type:* `+String+`
+*Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Possible values:* `'id: "string" title: "string"'
+*Input parameters:*
+[cols="1,1,1,3",options="header"]
+|===
+|Field |Type |Required? |Description
+|`+id+` | `+string+` | required | The id of the template to rename.
+|`+title+` | `+string+` | required | New template title.
+|===
+
+*Return data:*
+Empty object  `{}`
 
 === Example: using `advtemplate_rename_template`
 
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
-  advtemplate_rename_template: 'id: "template-id" title: "template-title"',
+  selector: 'textarea#advtemplate',  // change this value according to your html
+  plugins: ["advtemplate"],
+  advtemplate_rename_template: (id, title) =>
+    fetch('/templates/' + id, {
+      method: 'PUT',
+      body: JSON.stringify({
+        title
+      }),
+    })
+    .then((response) => response.json())
+    .then(({ id }) => ({}))
+    .catch((error) => console.log('Failed to rename template\n' + error)),
 });
 ----
