DOC-1912: advanced-templates.adoc
Restored missing plugins and toolbar configs to basic setup code sample.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -41,6 +41,8 @@ For example:
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your html
+  plugins: "advtemplate",
+  toolbar: "inserttemplate addtemplate",
   advtemplate_list: () => {
     return Promise.resolve([
       {
