--- a/modules/ROOT/pages/6.4.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.1-release-notes.adoc
@@ -469,7 +469,7 @@ tinymce.init({
   selector: "textarea",
   advcode_inline: true,
   plugins: [
-    "code", 'advcode', 
+    "code", "advcode", 
   ],
   toolbar: "textSizeIncrease textSizeDecrease"
 });
