--- a/modules/ROOT/partials/toolbar-button-ids/core-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/core-toolbar-buttons.adoc
@@ -13,7 +13,11 @@
 |`+copy+` |Copies the current selection into clipboard.
 |`+cut+` |Cuts the current selection into clipboard.
 |`+fontfamily+` |Dropdown list with font families to apply to selection.
-|`+fontsize+` |Dropdown list with font sizes to apply to selection.
+|`+fontsize+` |Dropdown list with font sizes to apply to selection. +
+The `+fontsize+` and `+fontsizeinput+` toolbar buttons should not be placed in a xref:toolbar-configuration-options.adoc#toolbar_groups[toolbar group] together or otherwise presented together.
+|`+fontsizeinput+` |Text entry input field to change font size of selection or current insertion point. Also provides increase and decrease font size buttons on either side of said input field. +
+This toolbar button is commonly used in conjunction with the `xref:user-formatting-options.adoc#font_size_input_default_unit[font_size_input_default]` configuration option. +
+The `+fontsize+` and `+fontsizeinput+` toolbar buttons should not be placed in a xref:toolbar-configuration-options.adoc#toolbar_groups[toolbar group] together or otherwise presented together.
 |`+forecolor+` |Applies foreground/text color to selection.
 |`+h1+` |Changes current line to the "Heading 1" style.
 |`+h2+` |Changes current line to the "Heading 2" style.
