DOC-1929: Add an include file to `/partial/misc/` re RTC no longer being sold or supported and `include::` said file appropriately (#2651)

--- a/modules/ROOT/pages/rtc-events.adoc
+++ b/modules/ROOT/pages/rtc-events.adoc
@@ -3,6 +3,8 @@
 :description: List of all available RTC specific events.
 :keywords: rtc, events
 
+include::partial$/misc/admon-rtc-eol.adoc[]
+
 == `+RtcClientConnected+`
 
 When a user joins a real-time collaboration session, the `+RtcClientConnected+` event is fired on existing {productname} instances in the session and provides the user information of the newly joined user to other editors in the session.
