--- a/modules/ROOT/partials/misc/browser-compatibility.adoc
+++ b/modules/ROOT/partials/misc/browser-compatibility.adoc
@@ -1,6 +1,6 @@
 // Note: The supportedwebbrowsers anchor is needed for older external links
 [[supported-web-browsers]]
-== [[supportedwebbrowsers]] Supported Web Browsers
+== [[supportedwebbrowsers]] Supported web browsers
 
 {productname} uses advanced JavaScript techniques to normalize inconsistencies among browsers to ensure a uniform user experience. The primary focus is on:
 
@@ -11,15 +11,30 @@
 
 {productname} may not function as expected on unlisted browsers. Try out the {productname} examples on {companyurl} to determine any functional limitations of an unlisted browser.
 
+=== Supported web browsers table
+
 [cols=",^,^,^",options="header"]
 |===
-|Browser |Windows |Mac |GNU/Linux
-|Chrome |{tick} |{tick} |{tick}
-|Firefox |{tick} |{tick} |{tick}
-|Edge |{tick} |- |-
-|Safari |- |{tick} |-
+|Browser                                   |Windows |macOS   |GNU/Linux
+|Chrome (current version)                  |{tick}  |{tick}  |{tick}
+|Chrome (penultimate version)              |60 days |60 days |-
+|Chrome Extended stable (current version)  |{tick}  |{tick}  |{tick}
+|Firefox (current version)                 |{tick}  |{tick}  |{tick}
+|Firefox (penultimate version)             |60 days |60 days |60 days
+|Firefox ESR (current version)             |{tick}  |{tick}  |{tick}
+|Edge (current version)                    |{tick}  |-       |-
+|Edge (penultimate version)                |{tick}  |-       |-
+|Safari (current version)                  |-       |{tick}  |-
+|Safari (penultimate version)              |-       |{tick}  |-
 |===
 
-NOTE: {productname} does not support browsers running in Quirks or backward compatibility modes.
+=== Notes on the supported web browsers table.
 
-{productname} supports the most recent version of all browsers listed above. {productname} also supports the latest Extended Support Release (ESR) from each vendor (e.g. Firefox). {productname} provides support for the prior major version for 60 days after the release has been superseded by a new major version (e.g. Chrome 98 vs. Chrome 97).
+. _Penultimate version_ is defined as the most-recent-but-one _major_ version of the listed browser.
+.. And _major version_ is defined as a change to the whole number portion of a browser’s version number.
+... For example Google Chrome 110 is the major version release that supercedes Google Chrome 109. So long as Google Chrome 110 is the current version, Google Chrome 109 will be the penultimate version.
+. The 60 days of support for penultimate versions begins as of the release of the current version. Once a current browser release is more than 60 days old, {productname} is no longer supported on the penultimate version.
+. {productname} is supported on the most recent update of the browsers listed above, on the operating systems listed above.
+. {productname} is not supported on browsers running in Quirks or backward compatibility modes.
+. {productname} is not supported on pre-release, beta, or other ‘technology preview’ browser releases.
+. On browsers that offer a longer-term stable version (ie Firefox Extended Support Release and Chrome Extended stable), {productname} is only supported on the current longer-term stable release.
